added confirmation for delete user post

--- a/Bonfire2.kv
+++ b/Bonfire2.kv
@@ -1241,4 +1241,4 @@
             text: "Back"
             on_press:
                 root.manager.transition.direction = "right"
-                root.manager.current = "SuccessScreen"
+                root.manager.current = "success"
