--- a/Bonfire3.kv
+++ b/Bonfire3.kv
@@ -104,42 +104,53 @@
             theme_text_color: "Error"
 
 <AdminScreen>:
-    MDFloatLayout:
-        md_bg_color: 0.996, 0.365, 0.149, 1  # Orange color in RGBA format
+    MDBoxLayout:
+        orientation: "vertical"
+        MDTopAppBar:
+            title: "Administrator Page"
+            anchor_title: "left"
+            left_action_items: [["home"]]
+            right_action_items: [["logout", lambda x: root.on_logout()]]
+            elevation: 1
+            md_bg_color: 248/255, 143/255, 70/255, 1 #light orange
+            specific_text_color: 44/255, 44/255, 44/255, 1 #gray
+        MDFloatLayout:
+            md_bg_color: 250/255, 237/255, 202/255, 1  # off white color in RGBA format
+            canvas:
+                Color:
+                    rgb: 250/255, 250/255, 250/255, 1
+            canvas.before:
+                Color:
+                    rgb: 217/255, 217/255, 217/255, 1
 
-        Label:
-            text: "Administrator Page"
-            font_size: 23
-            color: 1, 1, 1, 1  # White text color (RGBA format)
-            halign: 'center'
-            valign: 'middle'
-            size_hint: 1, 0.1
-            pos_hint: {"center_x": 0.5, "center_y": 0.8}
+            MDRaisedButton:
+                md_bg_color: 248/255, 143/255, 79/255, 1 #light orange
+                size_hint: .6, .07
+                pos_hint: {"center_x": .5, "center_y": .7}
+                text: "View Users"
+                text_color: 44/255, 44/255, 4/255, 1 #gray
+                on_release:root.view_users()
 
-        Button:
-            text: "View Users"
-            size_hint: 0.4, 0.1
-            pos_hint: {"center_x": 0.5, "y": 0.6}
-            background_color: 0, 0, 0, 1  # Black background color (RGBA format)
-            font_size: "15sp"
-            on_release: root.view_users()  # Define the view_users function
+            MDRaisedButton:
+                md_bg_color: 248/255, 143/255, 79/255, 1 #light orange
+                size_hint: .6, .07
+                pos_hint: {"center_x": .5, "center_y": .5}
+                text: "View Stories/Tips"
+                text_color: 44/255, 44/255, 4/255, 1 #gray
+                on_release:
+                    root.manager.transition.direction = "left"
+                    root.manager.current = "SuccessScreen"
 
-        Button:
-            text: "View Posts/Tips"
-            size_hint: 0.4, 0.1
-            pos_hint: {"center_x": 0.5, "y": 0.4}
-            background_color: 0, 0, 0, 1  # Black background color (RGBA format)
-            font_size: "15sp"
-            on_release: root.edit_posts()  # Define the delete_posts function
+            MDRaisedButton:
+                md_bg_color: 248/255, 143/255, 79/255, 1 #light orange
+                size_hint: .6, .07
+                pos_hint: {"center_x": .5, "center_y": .3}
+                text: "Identify a Plant"
+                text_color: 44/255, 44/255, 4/255, 1 #gray
+                on_release:
+                    root.manager.transition.direction = "left"
+                    root.manager.current = "PlantSearch"
 
-
-        Button:
-            text: "Logout"
-            size_hint: 0.2, 0.1  # Adjusted size_hint
-            pos_hint: {"right": 1, "y": 0}  # Adjusted pos_hint
-            background_color: 0, 0, 0, 1 # Red background color (RGBA format)
-            font_size: "15sp"
-            on_release: root.on_logout()
 
 <ViewUsersScreen>:
     MDBoxLayout:
@@ -167,22 +178,6 @@
                 cols: 2
                 spacing: dp(15)
                 background_color: 250/255, 237/255, 202/255, 1
-
-        MDRaisedButton:
-            pos_hint: {"center_x": .5, "center_y": .45}
-            size: (1, .5)
-            font_size: 32
-            #md_bg_color: 0.996, 0.365, 0.149
-            #md_bg_color: (255/255, 235/255, 228/255)
-            #md_bg_color: "black"
-            md_bg_color: 248/255, 143/255, 79/255, 1 #light orange
-            #md_bg_color: 44/255, 44/255, 44/255, 1 #gray
-            #text_color: 227/255, 71/255, 16/255, 1
-            text_color: 44/255, 44/255, 44/255, 1
-            text: "Back"
-            on_press:
-                root.manager.transition.direction = "right"
-                root.manager.current = "AdminScreen"
 
 
 <SuccessScreen>:
@@ -293,6 +288,7 @@
                 on_release:
                     root.manager.transition.direction = "left"
                     root.manager.current = "PlantSearch"
+
 <AdminDashScreen>:
     MDBoxLayout:
         orientation: "vertical"
