added comment screens, transitions

--- a/login/forgot_password.kv
+++ b/login/forgot_password.kv
@@ -54,7 +54,9 @@
                 text: "Back To Login"
                 pos_hint:{"center_x":0.5, "center_y": -3.5}
                 font_size: "13sp"
-                on_release: root.on_login()
+                on_release:
+                    root.manager.transition.direction = 'right'
+                    root.on_login()
 
 
             MDLabel:
