--- a/main.kv
+++ b/main.kv
@@ -45,3 +45,9 @@
         name: 'CoastTips'
     PlantSearch:
         name: 'PlantSearch'
+    MtCommentScreen:
+        name: 'MtCommentScreen'
+    PtCommentScreen:
+        name: 'PtCommentScreen'
+    CtCommentScreen:
+        name: 'CtCommentScreen'
