--- a/tips/ct_tips.kv
+++ b/tips/ct_tips.kv
@@ -1,4 +1,3 @@
-
 <CoastTips>:
 
     MDBoxLayout:
@@ -6,7 +5,7 @@
         md_bg_color: 250/255, 237/255, 202/255, 1  # off white color in RGBA format
 
         MDTopAppBar:
-            title: "Coastal Adventure Tips"
+            title: "Coastal Tips"
             anchor_title: "left"
             left_action_items: [["home", lambda x: root.callback()]]
             right_action_items: [["logout", lambda x: root.on_logout()]]
