--- a/tips/mt_tips.kv
+++ b/tips/mt_tips.kv
@@ -5,7 +5,7 @@
         md_bg_color: 250/255, 237/255, 202/255, 1  # off white color in RGBA format
 
         MDTopAppBar:
-            title: "Mountain Adventure Tips"
+            title: "Mountain Tips"
             anchor_title: "left"
             left_action_items: [["home", lambda x: root.callback()]]
             right_action_items: [["logout", lambda x: root.on_logout()]]
