--- a/admin/admin.kv
+++ b/admin/admin.kv
@@ -7,10 +7,10 @@
             left_action_items: [["home"]]
             right_action_items: [["logout", lambda x: root.on_logout()]]
             elevation: 1
-            md_bg_color: 248/255, 143/255, 70/255, 1 #light orange
-            specific_text_color: 44/255, 44/255, 44/255, 1 #gray
+            md_bg_color: 248/255, 143/255, 70/255, 1 # light orange
+            specific_text_color: 44/255, 44/255, 44/255, 1 # gray
         MDFloatLayout:
-            md_bg_color: 250/255, 237/255, 202/255, 1  # off white color in RGBA format
+            md_bg_color: 250/255, 237/255, 202/255, 1  # off white color
             canvas:
                 Color:
                     rgb: 250/255, 250/255, 250/255, 1
@@ -19,17 +19,17 @@
                     rgb: 217/255, 217/255, 217/255, 1
 
             MDRaisedButton:
-                md_bg_color: 248/255, 143/255, 79/255, 1 #light orange
+                md_bg_color: 248/255, 143/255, 79/255, 1 # light orange
                 size_hint: .6, .07
                 pos_hint: {"center_x": .5, "center_y": .7}
                 text: "View Users"
-                text_color: 44/255, 44/255, 4/255, 1 #gray
+                text_color: 44/255, 44/255, 4/255, 1 # gray
                 on_release:
                     root.manager.transition.direction = "left"
                     root.view_users()
 
             MDRaisedButton:
-                md_bg_color: 248/255, 143/255, 79/255, 1 #light orange
+                md_bg_color: 248/255, 143/255, 79/255, 1 # light orange
                 size_hint: .6, .07
                 pos_hint: {"center_x": .5, "center_y": .5}
                 text: "View Stories/Tips"
@@ -39,7 +39,7 @@
                     root.manager.current = "SuccessScreen"
 
             MDRaisedButton:
-                md_bg_color: 248/255, 143/255, 79/255, 1 #light orange
+                md_bg_color: 248/255, 143/255, 79/255, 1 # light orange
                 size_hint: .6, .07
                 pos_hint: {"center_x": .5, "center_y": .3}
                 text: "Identify a Plant"
