last second changes

--- a/login/change_password.kv
+++ b/login/change_password.kv
@@ -104,7 +104,9 @@
                         size: self.size
                         pos: self.pos
                         radius: [4]
-                on_release: root.change_password(username.text, reset_code.text, new_password.text)
+                on_release:
+                    root.change_password(username.text, reset_code.text, new_password.text)
+                    root.manager.current = "LoginScreen"
 
             MDLabel:
                 id: error_label
