--- a/main.kv
+++ b/main.kv
@@ -11,6 +11,8 @@
         name: 'SignupScreen'
     ForgotPasswordScreen:
         name: 'ForgotPasswordScreen'
+    ChangePasswordScreen:
+        name: 'ChangePasswordScreen'
     SuccessScreen:
         name: 'SuccessScreen'
     MenuScreen:
