added user/admin comments view

--- a/main.kv
+++ b/main.kv
@@ -53,3 +53,5 @@
         name: 'PtCommentScreen'
     CtCommentScreen:
         name: 'CtCommentScreen'
+    UserComScreen:
+        name: 'UserComScreen'
