--- a/admin/admin.kv
+++ b/admin/admin.kv
@@ -36,7 +36,7 @@
                 text_color: 44/255, 44/255, 4/255, 1 #gray
                 on_release:
                     root.manager.transition.direction = "left"
-                    root.manager.current = "SuccessScreen"
+                    root.manager.current = "AdminDashScreen"
 
             MDRaisedButton:
                 md_bg_color: 248/255, 143/255, 79/255, 1 # light orange
